# metrics-forge

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
blog/: dev-to-metrics-forge.md
metrics_forge/: __init__.py  cli.py  demo.py  models.py  parser.py
metrics_forge/analyzers/: __init__.py  dashboard_generator.py  rule_generator.py  rule_validator.py
metrics_forge/reporters/: export_reporter.py  terminal_reporter.py
tests/: conftest.py  test_analyzers.py  test_cli.py  test_models.py
